# ScyllaHide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
HookLibrary/: CMakeLists.txt  HookLibrary.vcxproj  HookLibrary.vcxproj.filters  HookLibraryResource.cmake  HookMain.h  HookedFunctions.cpp  HookedFunctions.h  LogClient.cpp  LogClient.h
HookLibrary/include/: HookMain.h  HookedFunctions.h  LogClient.h  exchange_data.h  hook_log_client.h
HookLibrary/lib/: HookedFunctions.cpp  LogClient.cpp  hook_helper.cpp  hook_log_client.cpp
HookLibrary/lib/AntiAntiDebug/: kernel32.cpp  ntdll.cpp  time.cpp  win32u.cpp
InjectorCLI/: ApplyHooking.cpp  ApplyHooking.h  CMakeLists.txt  CliMain.cpp  LogServer.cpp  LogServer.h  RemoteHook.cpp  RemoteHook.h  main.cpp  utils.cpp  utils.h
InjectorCLI/src/: main.cpp  utils.h
InternalDLL/: CMakeLists.txt
InternalDLL/AntiAntiLibrary/: AntiAntiLibraryResource.cmake  CMakeLists.txt
InternalDLL/AntiAntiLibrary/include/: hook_main.h
InternalDLL/AntiAntiLibrary/lib/: DllMain.cpp  exchange_data.cpp  hook_helper.cpp
InternalDLL/AntiAntiLibrary/lib/AntiAntiDebug/: ntdll.cpp
InternalDLL/IATHookMonitorLibrary/: CMakeLists.txt  IATHookMonitorLibraryResource.cmake
InternalDLL/IATHookMonitorLibrary/include/: DllMain.h  log_client.h
InternalDLL/IATHookMonitorLibrary/lib/: DllMain.cpp
InternalDLL/MonitorLibrary/: CMakeLists.txt  MonitorLibraryResource.cmake
InternalDLL/MonitorLibrary/lib/: log_client.cpp
MonitorLibrary/: CMakeLists.txt  MonitorLibraryResource.cmake
MonitorLibrary/include/: DllMain.h  exchange_data.h
MonitorLibrary/lib/: DllMain.cpp
PluginGeneric/: Injector.cpp  Injector.h
Scylla/: CMakeLists.txt  Logger.cpp  pe_header.cpp  scylla.yaml
Scylla/include/: pe_header.h  str_utils.h  utils.hpp
Scylla/include/logger/: log_client.h  log_server.h  udp_log_client.h  udp_log_server.h
Scylla/include/process/: map_pe_module.h  mem_indexable.h  memory_map_module.h  memory_map_pefile.h  memory_map_raw.h  memory_map_slice_ref.h  memory_map_stealthy_module.h  win_process_native.h
Scylla/include/scylla/: Settings.h  Version.h  charybdis.h  context_base.h  exchange.h  exchange_mx.h  splug.h  splug_config.h  splug_manager.h  utils.h
Scylla/include/scylla/splug/: dll_injector.h  exchange.h  iat_hook.h  inline_hook.h  key_value.h  log_server.h  peb_patch.h
Scylla/lib/: str_utils.cpp
Scylla/lib/logger/: console_log.cpp  log_client.cpp  log_server.cpp  udp_log_server.cpp
Scylla/lib/process/: map_pe_module.cpp  mem_indexable.cpp  memory_map_collection.cpp  memory_map_module.cpp  memory_map_pefile.cpp  memory_map_stealthy_module.cpp  memory_map_win_page.cpp  win_process_native.cpp  win_process_native_bytes_patch.cpp  win_process_native_hook.cpp  win_process_native_injectdll.cpp  win_process_native_memory_management.cpp  win_process_native_thread_suspension.cpp  win_process_resolve_export.cpp
Scylla/lib/scylla/: Logger.cpp  OsInfo.cpp  Peb.cpp  PebHider.cpp  Settings.cpp  User32Loader.cpp  Util.cpp  Version.cpp  charybdis.cpp  context_base.cpp  exchange.cpp  exchange_ex.cpp  splug.cpp  splug_config.cpp  splug_mananger.cpp  utils.cpp
Scylla/lib/scylla/splug/: dll_injector.cpp  exchange.cpp  iat_hook.cpp  inline_hook.cpp  key_value.cpp  log_server.cpp  peb_patch.cpp
Scylla/process/: map_pe_module.cpp  memory_map_module.cpp  memory_map_pefile.cpp  memory_map_raw.cpp  memory_map_slice_ref.cpp  memory_map_stealthy_module.cpp  pe_header.cpp  win_process_native.cpp  win_process_native_hook.cpp  win_process_native_injectdll.cpp
ScyllaCLI/: CMakeLists.txt
ScyllaGUI/: CMakeLists.txt
ScyllaGUI/include/scyllagui/: gui.h  imgui_app.h  scylla_app.h  ui_element.h  yaml_map.h  yaml_node.h
ScyllaGUI/include/scyllagui/splug/: dll_injector.h  exchange.h  iat_hook.h  inline_hook.h  key_value.h  log_server.h  peb_patch.h  splug_view.h
ScyllaGUI/include/scyllagui/widget/: checkbox_list.h  log_window.h  pagination.h  peinfo_window.h  process_select_window.h
ScyllaGUI/lib/: imgui_app.cpp  scylla_app.cpp  ui_element.cpp  yaml_map.cpp  yaml_node.cpp
ScyllaGUI/lib/splug/: dll_injector.cpp  exchange.cpp  iat_hook.cpp  inline_hook.cpp  key_value.cpp  log_server.cpp  peb_patch.cpp  splug_view.cpp
ScyllaGUI/lib/widget/: checkbox_list.cpp  log_window.cpp  pagination.cpp  peinfo_window.cpp  process_select_window.cpp
ScyllaMon/: CMakeLists.txt
ScyllaMon/src/: main.cpp
ScyllaStandalone/: CMakeLists.txt  Icon.rc
ScyllaStandalone/src/: main.cpp
ScyllaTest/: CMakeLists.txt  nxnx.cpp
asplugin/: CMakeLists.txt
asplugin/x64dbg/: CMakeLists.txt
asplugin/x64dbg/src/: plugin.cpp
sexchange/: CMakeLists.txt
sexchange/lib/: exchange.cpp
sinternaldlls/: CMakeLists.txt
sinternaldlls/include/: internal_dlls.h
sinternaldlls/lib/: internal_dlls.cpp
slogger/: CMakeLists.txt
slogger/include/logger/: callback_log.h  console_log.h  log_client.h  log_client_callback.h  log_client_console.h  udp_callback_log_server.h  udp_console_log_server.h  udp_log_server.h
slogger/lib/: callback_log.cpp  log_client.cpp  log_client_callback.cpp  log_client_console.cpp  printf_putchar.cpp  udp_callback_log_server.cpp  udp_console_log_server.cpp  udp_log_client.cpp
smalloc/: CMakeLists.txt
smalloc/include/: smalloc-new-delete.h  smalloc.h
smalloc/lib/: smalloc.cpp
sutils/: CMakeLists.txt
sutils/include/: base64.h  hex.h  misc.h  scylla_constants.h  str_utils.h  utils.hpp
sutils/lib/: base64.cpp  hex.cpp  misc.cpp  str_utils.cpp
